@@ -1,5 +1,7 @@
 Revision history for App-Doh
 
+          - Markdown allows class on trailing three graves
+          - Added default view configuration option
           - Use App::Doh in ::Server to get VERSION in scope
 
 0.3.1     2014-07-19 20:44:34
